Refactor qualifying and make event filter step mandatory
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>